/**************************************************************************************
 * Product: Adempiere ERP & CRM Smart Business Solution                               *
 * This program is free software; you can redistribute it and/or modify it    		  *
 * under the terms version 2 or later of the GNU General Public License as published  *
 * by the Free Software Foundation. This program is distributed in the hope           *
 * that it will be useful, but WITHOUT ANY WARRANTY; without even the implied         *
 * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.                   *
 * See the GNU General Public License for more details.                               *
 * You should have received a copy of the GNU General Public License along            *
 * with this program; if not, printLine to the Free Software Foundation, Inc.,        *
 * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.                             *
 * For the text or an alternative of this public license, you may reach us            *
 * Contributor: Raul Capecce raul.capecce@openupsolutions.com                         *
 * See: openupsolutions.com                                                           *
 *************************************************************************************/

plugins {
    id 'java'
    id 'application'
}

group 'org.adempiere'
version '3.9.3'

repositories {
    mavenCentral()

}

sourceCompatibility = 11
targetCompatibility = 11

dependencies {

    implementation fileTree(dir: 'lib', include: '*.jar')
    implementation fileTree(dir: 'tools/lib/', include: '*.jar')
    /*implementation fileTree(dir: 'tools/lib/ant/apache-ant-1.10.10/lib', include: '*.jar')*/
    implementation group: 'org.apache.ant', name: 'ant', version: '1.10.7'

    implementation fileTree(dir: 'zkwebui/WEB-INF/lib', include: '*.jar')


    /*implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: '*.jar')*/
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xbean.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xfire-all-1.2.6.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'XmlSchema-1.0.3.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'qdox-1.5.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'logkit-1.0.1.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'stax-api-1.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'jcommon-1.0.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'junit-3.8.1.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xercesImpl-2.4.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'plexus-container-default-1.0-alpha-8.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'spring-1.2.6.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'jdtcore-3.1.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'dom4j-1.6.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'plexus-utils-1.0.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'plexus-utils-1.0.4.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'wsdl4j-1.5.2.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'commons-digester-1.7.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'activation-1.1.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'stax-1.1.2-dev.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'wstx-asl-2.9.3.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'commons-codec-1.3.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xml-apis-1.3.02.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'jdom-1.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'jsr173_1.0_api.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'stax-utils-20040917.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xmlbeans-2.4.0-sources.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xml-resolver-1.1.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'generated_xmlbeans.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'jaxen-1.1-beta-9.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'avalon-framework-4.1.3.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'generated_xmlbeans-sources.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'jboss-1.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xfire-all-1.2.6-sources.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'classworlds-1.1-alpha-2.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xmlParserAPIs-2.6.2.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'commons-attributes-api-2.1.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'commons-httpclient-3.0.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'commons-beanutils-1.6.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'xbean-spring-2.8.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'wagon-provider-api-1.0-alpha-5.jar')
    implementation fileTree(dir: 'org.adempiere.webservice/WEB-INF/lib', include: 'commons-logging-1.0.4.jar')




    implementation fileTree(dir: 'tools/lib/storefront', include: '*.jar')
    implementation fileTree(dir: 'glassfishfacet/lib', include: '*.jar')
    implementation fileTree(dir: 'JasperReportsTools/lib', include: '*.jar')


    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

sourceSets {
    main.java.srcDirs += "base/src"
    main.java.srcDirs += "glassfishfacet/src"
    main.java.srcDirs += "client/src"
    main.java.srcDirs += "sqlj/src"
    main.java.srcDirs += "install/src"
    main.java.srcDirs += "extend/src"
    main.java.srcDirs += "serverRoot/src/main/ejb"
    main.java.srcDirs += "serverRoot/src/main/server"
    main.java.srcDirs += "serverRoot/src/main/servlet"
    main.java.srcDirs += "interfaces/src"
    main.java.srcDirs += "serverApps/src/main/servlet"
    main.java.srcDirs += "zkwebui/WEB-INF/src"
    main.java.srcDirs += "JasperReports/src"
    main.java.srcDirs += "JasperReportsWebApp/src"
    main.java.srcDirs += "tools/src"
    main.java.srcDirs += "webCM/src/main/servlet"
    main.java.srcDirs += "migration/src"
    main.java.srcDirs += "posterita/posterita/src/main"
    main.java.srcDirs += "org.eevolution.cashflow/src/main/java"
    main.java.srcDirs += "org.eevolution.hr_and_payroll/src/main/java/base"
    main.java.srcDirs += "org.eevolution.hr_and_payroll/src/main/java/ui/swing"
    main.java.srcDirs += "org.eevolution.hr_and_payroll/src/main/java/ui/zk"
    main.java.srcDirs += "org.eevolution.manufacturing/src/main/java/base"
    main.java.srcDirs += "org.eevolution.manufacturing/src/main/java/ui/swing"
    main.java.srcDirs += "org.eevolution.manufacturing/src/main/java/ui/zk"
    main.java.srcDirs += "org.eevolution.warehouse/src/main/java/base"
    main.java.srcDirs += "org.adempiere.asset/src/main/java/base"
    main.java.srcDirs += "org.adempiere.webservice/WEB-INF/src"
    main.java.srcDirs += "com.kkalice.adempiere.migrate/src"
    main.java.srcDirs += "org.eevolution.warehouse/src/main/java/ui/zk"
    main.java.srcDirs += "org.adempiere.production/src/main/java/base"
    main.java.srcDirs += "org.eevolution.fleet /src/main/java/main"
    main.java.srcDirs += "org.eevolution.fleet/src/main/java/base"
    main.java.srcDirs += "org.eevolution.fleet/src/main/java/ui/zk"
    main.java.srcDirs += "org.adempiere.pos/src/main/java/base"
    main.java.srcDirs += "org.adempiere.pos/src/main/java/ui/swing"
    main.java.srcDirs += "org.adempiere.pos/src/main/java/ui/zk"
    main.java.srcDirs += "org.adempiere.request/main/java"
    main.java.srcDirs += "org.adempiere.project/main/java"
    main.java.srcDirs += "org.adempiere.request/src/main/java"
    main.java.srcDirs += "org.adempiere.project/src/main/java"
    main.java.srcDirs += "org.adempiere.crm/src/main/java"
    main.java.srcDirs += "org.spin.hr_tna/src/main/java/base"
    main.java.srcDirs += "org.mx.cdhcm/src/main/java"
    main.java.srcDirs += "org.eevolution.freight/src/main/java/base"
    main.java.srcDirs += "org.spin.loan_and_investment_management/src/main/java/base"
    main.java.srcDirs += "org.spin.loan_management/src/main/java/base"
    main.java.srcDirs += "org.spin.hr_time _and_attendance/src/main/java/base"
    main.java.srcDirs += "org.spin.loan_management/src/main/java/ui/swing"
    main.java.srcDirs += "org.spin.loan_management/src/main/java/ui/zk"
    main.java.srcDirs += "org.spin.finance_management/src/main/java/base"
    main.java.srcDirs += "org.compiere.mobile/WEB-INF/src"
    main.java.srcDirs += "org.spin.store/src/main/java"

    main.resources.srcDirs += "base/src"
    main.resources.srcDirs += "client/src"
    main.resources.srcDirs += "client/build"
    main.resources.srcDirs += "target/webapp/WEB-INF/classes"
}

compileJava {
    options.compilerArgs  += [ "--add-exports", "java.naming/com.sun.jndi.ldap=ALL-UNNAMED"]
}

application {
    mainClass = 'org.compiere.Adempiere'
    applicationDefaultJvmArgs = ["-DPropertyFile=../../../AdempiereProperties/AD_trunk.properties"]
}

test {
    useJUnitPlatform()
}